# text_classification

./: .gitattributes  .gitignore  README.md  docker-compose.yml  environment.yml
aws/ecr/: README.md
aws/ecs/: README.md
docker/: BERT_function.py  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
docker/spacy/: meta.json
docker/spacy/vocab/: strings.json
docker/text_classification/: model.py
model/BBv1/: .gitattributes
notebooks/: text-classification-using-spacy.ipynb
